2005-07-21  Richard Guenther  <rguenther@suse.de>

	PR testsuite/22522
	* gcc.dg/tree-ssa/flatten-1.c: Use correct regexp for
	scanning for asm labels.
	* gcc.dg/tree-ssa/flatten-2.c: Likewise.

2005-07-21  Paolo Bonzini  <bonzini@gnu.org>

	PR target/22085
	* gcc.dg/altivec-pr22085.c: New.

2005-07-21  Paolo Bonzini  <bonzini@gnu.org>

	PR tree-optimization/19210
        * gcc.dg/tree-ssa/pr19210-1.c: New.
        * gcc.dg/tree-ssa/pr19210-2.c: New.

2005-07-21  Richard Sandiford  <richard@codesourcery.com>

	PR rtl-optimization/22167
	* g++.dg/opt/pr22167.C: New test.

2005-07-20  Douglas Gregor <doug.gregor@gmail.com>

	PR c++/2922
	* g++.dg/lookup/two-stage2.C: New.
	* g++.dg/lookup/two-stage3.C: New.
	* g++.dg/lookup/two-stage4.C: New. Illustrates how we have not yet
	fixed two-stage name lookup for operators.
	* g++.dg/template/call3.C: Compiler now produces an appropriate
	error message. 
	* g++.dg/template/crash37.C: Compiler now describes bla() on line
	14 as a candidate. 
	* g++.dg/template/ptrmem4.C: Compiler produces different error
	message.
	* g++.old-deja/g++.other/pmf3.C: Compiler now describes
	connect_to_method as a candidate.
	
2005-07-20  James A. Morrison  <phython@gcc.gnu.org>

	* gcc.dg/fold-alloc-1.c: New test.

2005-07-20  Kazu Hirata  <kazu@codesourcery.com>

	* gcc.dg/20020312-2.c, gcc.dg/sibcall-3.c, gcc.dg/sibcall-4.c,
	gcc.dg/cpp/assert4.c: Don't mention obsolete ports.

2005-07-19  James A. Morrison  <phython@gcc.gnu.org>

	* gcc.dg/fold-abs-1.c: New test.
	* gcc.dg/fold-abs-2.c: New test.
	* gcc.dg/fold-abs-3.c: New test.

2005-07-20  Giovanni Bajo  <giovannibajo@libero.it>

	Make CONSTRUCTOR use VEC to store initializers.
	* g++.dg/ext/complit3.C: Check for specific error messages.
	* g++.dg/init/brace2.C: Update error message.
	* g++.dg/warn/Wbraces2.C: Likewise.

2005-07-19 Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/16940
	* gfortran.dg/module_interface_1.f90: New test.

2005-07-19  Danny Berlin <dberlin@dberlin.org>