@@ -1,3 +1,8 @@
+2005-07-21  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	PR c/22393
+	* gcc.dg/complex-4.c: New test.
+
 2005-07-21  Richard Guenther  <rguenther@suse.de>
 
 	PR testsuite/22522
